# Virtuoso

./: CODEOWNERS  README.md  install.md
virtuoso_autonomy/: README.md  frames.gv  package.xml  setup.cfg  setup.py
virtuoso_autonomy/config/: microstrain.yml
virtuoso_autonomy/config/roboboat/: channel_nav.yaml  channel_nav_old.yaml  finals.yaml  loop.yaml  safety_check.yaml  semis.yaml  water_shooter.yaml
virtuoso_autonomy/config/robotx/: docking.yaml
virtuoso_autonomy/config/vrx_roboboat/: channel_nav.yaml  channel_nav_old.yaml  docking.yaml  finals.yaml  loop.yaml  safety_check.yaml  semis.yaml
virtuoso_autonomy/config/vrx_robotx/: docking.yaml  gymkhana.yaml
virtuoso_autonomy/launch/: dock.launch.py  enter_exit.launch.py  gps.launch.py  gymkhana.launch.py  imu.launch.py  main.launch.py  safetyCheck.launch.py  scan_code.launch.py  setup.launch.py  task1.launch.py  task3.launch.py
virtuoso_autonomy/launch/roboboat/: roboboat_ball_shooter.launch.py  roboboat_ball_shooter_setup.launch.py  roboboat_channel_nav.launch.py  roboboat_channel_nav_setup.launch.py  roboboat_docking.launch.py  roboboat_docking_setup.launch.py  roboboat_finals.launch.py  roboboat_finals_setup.launch.py  roboboat_loop.launch.py  roboboat_loop_setup.launch.py  roboboat_safety_check.launch.py  roboboat_safety_check_setup.launch.py  roboboat_semis.launch.py  roboboat_semis_setup.launch.py  roboboat_water_shooter.launch.py  roboboat_water_shooter_setup.launch.py
virtuoso_autonomy/launch/robotx/: robotx_dock.launch.py  robotx_dock_setup.launch.py  robotx_enter_exit.launch.py  robotx_enter_exit_setup.launch.py  robotx_gymkhana.launch.py  robotx_gymkhana_setup.launch.py  robotx_safety_check.launch.py  robotx_safety_check_setup.launch.py  robotx_scan_code.launch.py  robotx_scan_code_setup.launch.py  robotx_wildlife_encounter.launch.py  robotx_wildlife_encounter_setup.launch.py  safetyCheck.launch.py
virtuoso_autonomy/launch/vrx/: vrx_main.launch.py
virtuoso_autonomy/virtuoso_autonomy/: f9p_gps_republish.py  getTask1Goal.py  mission_interpreter.py  test_waypoint_generator.py
virtuoso_autonomy/virtuoso_autonomy/testing/: test_waypoint_generator.py
virtuoso_autonomy/virtuoso_autonomy/utils/: geometry_conversions.py  math.py  task_info.py
virtuoso_autonomy/virtuoso_autonomy/vrx/: mission_interpreter.py
virtuoso_localization/: README.md  package.xml  readme.md  setup.cfg  setup.py
virtuoso_localization/config/: ekf.yaml
virtuoso_localization/config/roboboat/: ekf.yaml  ekf_dgnss.yaml  ekf_magnetic.yaml  ekf_selection.yaml
virtuoso_localization/config/robotx/: ekf.yaml  ekf_selection.yaml  sensor_config.yaml
virtuoso_localization/config/vrx/: ekf.yaml
virtuoso_localization/config/vrx_roboboat/: ekf.yaml  multi_tasks_waypoint_saver.yaml  sensor_config.yaml
virtuoso_localization/config/vrx_robotx/: ekf.yaml
virtuoso_localization/launch/: ekf.launch.py  launch_ekf.launch.py  multi_tasks_waypoint_saver.launch.py  waypoint_saver.launch.py
virtuoso_localization/virtuoso_localization/: continual_ekf.py  dynamic_model.py  dynamic_sim_ukf2.py  dynamic_sim_ukf3.py  ekf.py  example_dynamic_model.py  filter_readme.txt  localization_debugger_node.py  multi_tasks_waypoint_saver_node.py  readme.md  republisher_node.py  ukf.py  waypoint_saver_node.py
virtuoso_localization/virtuoso_localization/examples/: example_dynamic_model.py
virtuoso_localization/virtuoso_localization/testing/: dynamic_sim.py  dynamic_sim_ekf.py  dynamic_sim_ukf.py  test_data_publisher.py
virtuoso_localization/virtuoso_localization/utils/: keyboard_listener_node.py
virtuoso_mapping/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
virtuoso_mapping/config/vrx_roboboat/: costmap_2d.yaml  dummy.yaml  (+1 more)
virtuoso_mapping/launch/: gates.launch.py  main.launch.py
virtuoso_mapping/virtuoso_mapping/: buoy_map_node.py  inflation_layer.py  mapped_buoy.py  occupancy_map_generator_node.py  pcl_to_map_frame_node.cpp
virtuoso_navigation/: README.md  package.xml  setup.cfg  setup.py
virtuoso_navigation/launch/: astar.launch.py  main.launch.py  multi_tasks_waypoint_player.launch.py  rviz.launch.py  waypoint_player.launch.py
virtuoso_navigation/param/: nav2.param.yaml
virtuoso_navigation/rviz/: view.rviz
virtuoso_navigation/virtuoso_navigation/: approach_target_node.py  astar.py  choose_PID.py  get_points.py  multi_tasks_waypoint_player_node.py  rotate_node.py  set_goal.py  single_waypoint_node.py  station_keeping_node.py  translate_node.py  waypoint_player_node.py  waypoints.py  waypoints_node.py
virtuoso_perception/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
virtuoso_perception/launch/: euclidean_clustering.launch.py  find_and_classify_buoys.launch.py  find_buoys.launch.py  find_docks.launch.py  gates.launch.py  processing.launch.py  scan_code.launch.py  test_buoy_cam_filter.launch.py  test_find_dock_codes.launch.py  yolo.launch.py
virtuoso_perception/param/: euclidean_clustering.param.yaml
virtuoso_perception/spawner/: README.md  changing_fog.py  image_taker.py
virtuoso_perception/src/: euclidean_clustering_node.cpp  ground_filter.cpp
virtuoso_processing/: README.md  package.xml  setup.cfg  setup.py
virtuoso_processing/launch/: camera_processing.launch.py  lidar_processing.launch.py  main.launch.py
virtuoso_processing/param/: nav2.param.yaml  ray_ground_classifier.param.yaml  stvl.param.yaml  voxel_grid_node.param.yaml
virtuoso_processing/virtuoso_processing/: downscale.py  grayscale.py  self_filter.py
virtuoso_sensors/: README.md  package.xml  readme.md  setup.cfg  setup.py
virtuoso_sensors/config/: microstrain.yml  urg.yml  vlp16-convert.yml  vlp16.yml
virtuoso_sensors/launch/: .camera.launch.py.swp  camera.launch.py  f9p.launch.py  gps.launch.py  hokuyo.launch.py  imu.launch.py  lidar.launch.py  main.launch.py  robotx.launch.py  vlp16.launch.py
virtuoso_sensors/params/: vlp16db.yml
virtuoso_sensors/virtuoso_sensors/: camera_info_node.py  camera_republish.py  f9p_gps_republish.py  gx3_republish.py  laser_geometry.py  laser_to_pcd_node.py  lidar_republish.py
(+370 files in other folders)
